--- a/opencart/upload/admin/view/template/extension/payment/passimpay.twig
+++ b/opencart/upload/admin/view/template/extension/payment/passimpay.twig
@@ -25,7 +25,7 @@
 					<div class="panel-body">
 						<div class="col-sm-2" style="text-align: right;margin-left: -15px;margin-right: -15px;"><b> </b></div>
 						<div class="col-sm-10" style="padding-left: 25px;">
-							<a href="https://passimpay.io/register" target="_blank">Register a website in the payment system PASSIMPAY >>></a>
+							<a href="https://passimpay.io/register" target="_blank" rel="noopener noreferrer">Register a website in the payment system PASSIMPAY >>></a>
 							
 						</div>
 					</div>
